--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pdbpp==0.10.3
 
 fastapi==0.95.1
 fastapi-pagination==0.12.2
-gunicorn==20.0.4
+gunicorn>=22.0.0
 uvicorn==0.22.0
 orjson==3.5.0
 pytz==2020.1
